refactor runtime engine